function(rwkv_add_example source)
	get_filename_component(EXAMPLE_TARGET ${source} NAME_WE)
	add_executable(rwkv_${EXAMPLE_TARGET} ${source})
	target_link_libraries(rwkv_${EXAMPLE_TARGET} PRIVATE ggml rwkv)
endfunction()

file(GLOB examples *.c)
foreach (example ${examples})
	rwkv_add_example(${example})
endforeach()